--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@ title: 'This is my Blog Name'
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.ico' type='image/x-icon' />
-  <link href='{{site.baseurl}}/site.css' rel='stylesheet' />
+  <link href='{{site.baseurl}}/css/site.css' rel='stylesheet' />
 </head>
 <body>
   <div class='container'>
@@ -25,5 +25,5 @@ title: 'This is my Blog Name'
     </div>
     {{content}}
   </div>
-  <script src='{{site.baseurl}}/site.js'></script>
+  <script src='{{site.baseurl}}/js/site.js'></script>
 </body>
