--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,21 @@
 ---
-title: 'This is my Blog Name'
+title: ''
 ---
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Site Title {% if page.url != '/index.html' %}| {{page.title}}{% endif %}</title>
+  <title>Visit Willy Street</title>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.ico' type='image/x-icon' />
   <link href='{{site.baseurl}}/css/site.css' rel='stylesheet' />
 </head>
 <body>
-  <div class='container'>
+  <div class='container splash-screen'>
+      <h1>VISIT WILLY STREET</h1>
+      <img src="img/logo.png">
+      <h1>COMING SOON</h1>
+  <!--</div>
     <div class='col12 clearfix'>
       <div class='header col6 margin3 pad4h'>
         <div class='clearfix col12'>
@@ -25,5 +29,6 @@ title: 'This is my Blog Name'
     </div>
     {{content}}
   </div>
-  <script src='{{site.baseurl}}/js/site.js'></script>
+  <script src='{{site.baseurl}}/js/site.js'></script>-->
 </body>
+
