--- a/css/site.css
+++ b/css/site.css
@@ -40,12 +40,35 @@ table { border-collapse: collapse; border-spacing:0; }
 
 /* Inline Elements & Typography
 ------------------------------------------------------- */
+@font-face {
+    font-family: 'bebas_neueregular';
+    src: url('../fonts/BebasNeue-webfont.eot');
+    src: url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/BebasNeue-webfont.woff') format('woff'),
+         url('../fonts/BebasNeue-webfont.ttf') format('truetype'),
+         url('../fonts/BebasNeue-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+.splash-screen{
+    text-align:center;
+}
+.splash-screen > h1:first-child {
+    margin-top:200px;
+}
+body{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background:url(../img/bg.png);
+}
 body,
 input,
 textarea {
   color:#516066;
-  font:15px/1.67 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font:15px/1.67 'bebas_neueregular''Helvetica Neue', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing:antialiased;
+  color:#207278;
   }
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
