--- a/css/site.css
+++ b/css/site.css
@@ -66,7 +66,7 @@ body,
 input,
 textarea {
   color:#516066;
-  font:15px/1.67 'bebas_neueregular''Helvetica Neue', Helvetica, Arial, sans-serif;
+  font:15px/1.67 'bebas_neueregular','Helvetica Neue', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing:antialiased;
   color:#207278;
   }
