--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@ title: ''
 </head>
 <body>
   <div class='container splash-screen'>
-      <h1>VISIT WILLY STREET</h1>
-      <img src="img/logo.png">
-      <h1>COMING SOON</h1>
+      <!--<h1>VISIT WILLY STREET</h1>-->
+      <img src="img/VisitWillySt Coming Soon.jpg">
+      <!--<h1>COMING SOON</h1>-->
   <!--</div>
     <div class='col12 clearfix'>
       <div class='header col6 margin3 pad4h'>
